Fixed aligning of tag:help.

--- a/sw/shongo/client-web/src/main/resources/css/application.css
+++ b/sw/shongo/client-web/src/main/resources/css/application.css
@@ -313,7 +313,6 @@ div.bordered table {
 .tooltip-container {
     display: inline-block;
     line-height: 20px;
-    vertical-align: top;
 }
 .tooltip-label {
     display: inline-block;
